fixed header on mobile

--- a/main.css
+++ b/main.css
@@ -203,14 +203,6 @@ h2{
     backface-visibility:hidden;
 }
 
-@media (max-width: 450px){
-    #header{
-        left: 800px;
-    }
-    h1{
-        margin-top: -10px;
-    }
-}
 
 #header p{
     display: inline-block;
@@ -370,4 +362,18 @@ a:hover{
     border-width: 0 0 2px 0;
     border-color: #bcf8f3;
     border-style: solid;
+}
+
+@media (max-width: 450px){
+    h1{
+        margin-top: -10px;
+    }
+    #navbar > p{
+        margin-left: 10px;
+    }
+}
+@media (max-width: 320px){
+    #header{
+        left: 800px;
+    }
 }
